update google client id

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=3001
-GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_ID=396168619312-ft7mttpjtk16hdid2k41vqb3npd1h5lc.apps.googleusercontent.com
